# appleappscli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: applescript.rs  lib.rs  main.rs  markdown.rs
src/calendar/: add.rs  datetime.rs  list_calendars.rs  list_day.rs  mod.rs
src/mail/: list_recent.rs  mailboxes.rs  mod.rs  send.rs
src/messages/: chatdb.rs  list.rs  mod.rs  read.rs  send.rs
src/notes/: append.rs  attach.rs  create.rs  list.rs  mod.rs  move_note.rs  read.rs
src/photos/: albums.rs  export.rs  find.rs  mod.rs  photosdb.rs
src/reminders/: complete.rs  create.rs  delete.rs  list.rs  mod.rs
src/terminal/: list_windows.rs  mod.rs  new_tab.rs  new_window.rs  send.rs
