[package]
name = "appleappscli"
version = "0.1.0"
edition = "2024"
description = "CLI for scripting macOS apps (Notes, Reminders, Calendar, Messages, Photos, Terminal) via AppleScript"
license = "MIT"

[[bin]]
name = "aacli"
path = "src/main.rs"

[lib]
name = "appleappscli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pulldown-cmark = "0.10"
tempfile = "3.10"
